# escape-the-valley

./: .gitattributes  .gitignore  CHANGELOG.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SECURITY.md  SHIP_GATE.md  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-binaries.yml  release.yml
agents/: skilled.py
docs/: landing-design-brief.md  survival-guide.md
scripts/: ledger_proof.py  sim_gm_panel.py  sim_skilled.py  simulate.py  verify.sh  yaml_to_json.py
site/: astro.config.mjs
site/public/: index.html
site/scripts/: unbundle-landing.py
site/src/: site-config.ts
site/src/styles/: starlight-custom.css
src/escape_the_valley/: __init__.py  __main__.py  adapter.py  backpack.py  backpack_models.py  backpack_ui.py  cli.py  engine.py  event_loader.py  events.py  gm.py  intent.py  ledger.py  ledger_proof.py  memory.py  memory_emitters.py  models.py  narration.py  physics.py  resources.py  save.py  step_engine.py  tui.tcss  tui_app.py  ui.py  voice.py  worldgen.py
src/escape_the_valley/data/: event_skeletons.json
tests/: test_adapter.py  test_backpack.py  test_backpack_ledger.py  test_backpack_models.py  test_backpack_save.py  test_cli_stats.py  test_death_causes.py  test_event_loader.py  test_events.py  test_gm.py  test_ledger.py  test_ledger_proof.py  test_memory.py  test_memory_emitters.py  test_models.py  test_narration.py  test_physics.py  test_save.py  test_step_engine.py  test_tui_smoke.py  test_voice.py  test_worldgen.py
(+9 files in other folders)
