[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "escape-the-valley"
version = "1.0.0"
description = "Oregon Trail-style survival game powered by Ollama GM with XRPL ledger-backed inventory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" },
]
keywords = ["game", "survival", "xrpl", "ollama", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
    "textual>=0.70",
]

[project.scripts]
trail = "escape_the_valley.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/escape_the_valley"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
